# medical-vision

./: .gitignore  README.md  app.py  brain_report.md  infer.py  llm_client.py  medclsnet_config.json  model.py  pyproject.toml  train.py
backend/: inference.py  llm.py  main.py  model.py  pyproject.toml  requirements.txt
desktop/: infer.py  train.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
