[project]
name = "medical-vision"
version = "0.1.0"
description = ""
authors = [{ name = "TheWitcher1991", email = "ashot.svazyan@yandex.ru" }]
requires-python = ">=3.12,<3.14.1 || >3.14.1,<3.15"
dependencies = [
  "numpy (>=2.4.4,<3.0.0)",
  "torch (>=2.11.0,<3.0.0)",
  "isort (>=8.0.1,<9.0.0)",
  "black (>=26.3.1,<27.0.0)",
  "pillow (>=12.2.0,<13.0.0)",
  "torchvision (>=0.26.0,<0.27.0)",
  "kagglehub (>=1.0.0,<2.0.0)",
  "kaggle (>=2.1.0,<3.0.0)",
  "tqdm (>=4.67.3,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
